# AWS-template

./: .env.example  Dockerfile  pyproject.toml
.aws/: config.example
examples/: S3.py  clients.py
tests/: conftest.py  test_foo.py  test_s3.py
